# instructions

./: instruction.txt
version/: CMakeLists.txt
version/src/: CMakeLists.txt
version/test/: CMakeLists.txt
