set(target ${MP2_TESTS})

file(GLOB hdrs "*.h*")
file(GLOB srcs "*.cpp")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../3rdparty/googletest")

enable_testing()
add_executable(${target} ${srcs} ${hdrs})
target_link_libraries(${target} GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(${target})

